--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -1,3 +1,21 @@
+<ion-menu [content]="content">
+  <ion-header no-border>
+    <ion-toolbar>
+      <ion-title>Меню</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content>
+    <ion-list>
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        {{p.title}}
+      </button>
+    </ion-list>
+  </ion-content>
+
+</ion-menu>
+
+
 <!-- Generated template for the HomeComponent component -->
 <div>
   {{text}}
